More CSS mobile fixes

--- a/_posts/2020-11-03-heaps.md
+++ b/_posts/2020-11-03-heaps.md
@@ -7,7 +7,7 @@ excerpt_separator: <!-- excerpt-end -->
 ---
 
 <div style="background-color: #FFBF60;">
-    <img src="/assets/images/heaps_logo.svg" alt="heaps logo" style="height: 200px; width: auto; margin: auto; display: block; ">
+    <img src="/assets/images/heaps_logo.svg" alt="heaps logo" style="width: 100%; height: auto; margin: auto; display: block; ">
 </div>
 
 <!-- excerpt-start -->
