--- a/_posts/2020-11-03-heaps.md
+++ b/_posts/2020-11-03-heaps.md
@@ -1,5 +1,5 @@
 ---
-title: Our first project using the Haxe and Heaps
+title: Our first project using Haxe and Heaps
 layout: post
 author: Seth
 image: haxe_logo.svg
